Sep 27 first commit!

--- a/index.html
+++ b/index.html
@@ -181,6 +181,20 @@
           </div>
         </div>
       </div>
+
+      <div class="card" onclick="myFlipFunction(this)">
+        <div id="thecard">
+          <div class="thefront">
+            <h1>Front of Card 6</h1>
+            <p>Additional information for card 5.</p>
+          </div>
+          <div class="theback">
+            <h1>Back of Card 5</h1>
+            <p>Terms and conditions for card 5.</p>
+            <button>Submit</button>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script>
