--- a/index.html
+++ b/index.html
@@ -1,13 +1,175 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles.css">
+    <title>Product Look Up</title>
+</head>
+
+<body>
+    <script src="./index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <nav class="navbar" style="background-color: #e3f2fd;">
+        <div class="container-fluid  justify-content-center">
+            <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div>
+
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+          <li class="nav-item">
+            <a class="nav-link active" id="plu-tab" data-toggle="tab" href="#plu" role="tab" aria-controls="PLUs" aria-selected="true">PLUs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="locations-tab" data-toggle="tab" href="#locations" role="tab" aria-controls="Locations" aria-selected="false">Locations</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="generator-tab" data-toggle="tab" href="#generator" role="tab" aria-controls="Generator" aria-selected="false">Generator</a>
+          </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+          <div class="tab-pane fade show active" id="plu" role="tabpanel" aria-labelledby="plu-tab">...</div>
+          <div class="tab-pane fade" id="locations" role="tabpanel" aria-labelledby="profile-tab">...</div>
+          <div class="tab-pane fade" id="generator" role="tabpanel" aria-labelledby="contact-tab">...</div>
+        </div>
+
+    </nav>
+
+    <div class="container mt-4">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+            <div class="col">
+                <div class="card" onclick="myFlipFunction(this)">
+                    <div id="thecard">
+                        <div class="thefront">
+                            <h1>Organic Banana Bunch</h1>
+                            <p>Additional information for card 1.</p>
+                        </div>
+                        <div class="theback">
+                            <h1>Barcode</h1>
+                            <svg id="barcode1"></svg>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Repeat this block for the remaining 5 cards -->
+            <!-- Card 2 -->
+            <div class="col">
+                <div class="card" onclick="myFlipFunction(this)">
+                    <div id="thecard">
+                        <div class="thefront">
+                            <h1>Front of Card 2</h1>
+                            <p>Additional information for card 2.</p>
+                        </div>
+                        <div class="theback">
+                            <h1>Barcode</h1>
+                            <svg id="barcode2"></svg>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="col">
+                <div class="card" onclick="myFlipFunction(this)">
+                    <div id="thecard">
+                        <div class="thefront">
+                            <h1>Front of Card 3</h1>
+                            <p>Additional information for card 3.</p>
+                        </div>
+                        <div class="theback">
+                            <h1>Barcode</h1>
+                            <svg id="barcode3"></svg>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 4 -->
+            <div class="col">
+                <div class="card" onclick="myFlipFunction(this)">
+                    <div id="thecard">
+                        <div class="thefront">
+                            <h1>Front of Card 4</h1>
+                            <p>Additional information for card 4.</p>
+                        </div>
+                        <div class="theback">
+                            <h1>Barcode</h1>
+                            <svg id="barcode4"></svg>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 5 -->
+            <div class="col">
+                <div class="card" onclick="myFlipFunction(this)">
+                    <div id="thecard">
+                        <div class="thefront">
+                            <h1>Front of Card 5</h1>
+                            <p>Additional information for card 5.</p>
+                        </div>
+                        <div class="theback">
+                            <h1>Barcode</h1>
+                            <svg id="barcode5"></svg>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 6 -->
+            <div class="col">
+                <div class="card" onclick="myFlipFunction(this)">
+                    <div id="thecard">
+                        <div class="thefront">
+                            <h1>Front of Card 6</h1>
+                            <p>Additional information for card 6.</p>
+                        </div>
+                        <div class="theback">
+                            <h1>Barcode</h1>
+                            <svg id="barcode6"></svg>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        function myFlipFunction(card) {
+            card.querySelector("#thecard").classList.toggle("flipper");
+        }
+    </script>
+</body>
+</html>
+
+
+
+<!-- <!DOCTYPE html>
+<html>
   <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-    <title>Product Look Up</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles.css">
+    <title>Product Look Up</title>
   </head>
 
   <body>
     <script src="./index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    
+    <nav class="navbar" style="background-color: #e3f2fd;">
+      <div class="container-fluid">
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+
     <div class="card-container">
       <div class="card" onclick="myFlipFunction(this)">
         <div id="thecard">
@@ -94,4 +256,4 @@
       }
     </script>
   </body>
-</html>
+</html> -->
