--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </form>
         </div>
         <br><br><br>
-        <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <ul class="nav nav-tabs container-fluid justify-content-center" id="myTab" role="tablist">
   <li class="nav-item" role="presentation">
     <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">PLUs</button>
   </li>
